Change cors and add neew elements (users, roles) change apis