@@ -8,6 +8,8 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
+import java.util.stream.Collectors;
+
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
 
@@ -24,8 +26,8 @@ public class CustomUserDetailsService implements UserDetailsService {
 
         // Convertir roles a GrantedAuthority
         var authorities = user.getRoles().stream()
-                .map(role -> new SimpleGrantedAuthority(role)) // No agregar "ROLE_" manualmente
-                .toList();
+                .map(role -> new SimpleGrantedAuthority(role.getName())) // Extraer el nombre del rol
+                .collect(Collectors.toList());
 
         return org.springframework.security.core.userdetails.User.builder()
                 .username(user.getUsername())
